[package]
authors = ["Axlefublr"]
license = "MIT"
description = "not done yet"
readme = "README.md"
homepage = "https://github.com/Axlefublr/clorange"
repository = "https://github.com/Axlefublr/clorange"
name = "clorange"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.8", features = ["derive"] }
dirs = "5.0.1"
