[package]
authors = ["Axlefublr"]
license = "MIT"
description = "A simple shell-oriented counter CLI"
readme = "README.md"
homepage = "https://github.com/Axlefublr/clorange"
repository = "https://github.com/Axlefublr/clorange"
name = "clorange"
version = "1.0.3"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.8", features = ["derive"] }
const_format = "0.2.32"
dirs = "5.0.1"
